--- a/styles.css
+++ b/styles.css
@@ -10,31 +10,38 @@ h1 {
 }
 h2 {
   font-family: "raleway", sans-serif;
-  font-weight: 700;
+  font-weight: bold;
 }
 h3 {
   font-family: "raleway", sans-serif;
-  font-weight: 700;
-  font-size: 0.8em;
+  font-weight: bold;
 }
-
+a {
+  font-family: "raleway", sans-serif;
+  font-weight: bold;
+}
 /****************general***************/
 * {
   margin: 0;
   padding: 0;
 }
 body {
-  width: 100vw;
   margin: auto;
 }
 .bloc_page {
-  margin: auto;
   width: 1440px;
+  margin: auto;
 }
 
 a {
   color: black;
   text-decoration: none;
+}
+.rating {
+  color: #0065fc;
+}
+.not_rating {
+  color: #f2f2f2;
 }
 /****************header**********************/
 
@@ -54,9 +61,9 @@ header {
   flex-wrap: wrap;
 }
 .logo img {
-  height: 40px;
+  height: 45px;
   width: 95px;
-  margin-top: 50px;
+  margin-top: 60px;
   margin-right: 800px;
 }
 
@@ -65,23 +72,6 @@ nav {
   justify-content: space-evenly;
 }
 
-.menu {
-  height: 70px;
-  width: 400px;
-  display: flex;
-  justify-content: space-evenly;
-}
-li {
-  display: flex;
-  list-style-type: none;
-  text-decoration: none;
-  color: #0065fc;
-  justify-content: space-between;
-}
-nav a {
-  font-size: 1.2em;
-  text-decoration: none;
-}
 .nav_border-top {
   display: flex;
   margin-top: 50px;
@@ -94,7 +84,6 @@ nav a {
 .nav_border-top a:hover {
   border-top: 3px solid #0065fc;
   padding-top: 47px;
-
   color: #0065fc;
 }
 .nav_inscrire {
@@ -109,8 +98,9 @@ nav a {
 }
 
 .presentation {
-  /* margin-top: 20px; */
+  line-height: 2;
 }
+/************Champs de recherche*************/
 .champs_de_recherche {
   display: flex;
   height: 55px;
@@ -148,6 +138,7 @@ nav a {
   border-top: 2px solid #f2f2f2;
   border-bottom: 2px solid #f2f2f2;
   padding-left: 20px;
+  padding-right: 10px;
 }
 .btn {
   height: 55px;
@@ -155,12 +146,11 @@ nav a {
   color: white;
   background-color: #0065fc;
   font-size: 1.2em;
-  border-top-right-radius: 12px;
-  border-bottom-right-radius: 12px;
-  padding-right: 20px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  padding-right: 10px;
   padding-left: 20px;
   border: none;
-  justify-content: center;
   align-items: center;
   cursor: pointer;
 }
@@ -176,7 +166,7 @@ nav a {
   width: 950px;
   height: 50px;
 }
-
+/************Filtres*************/
 .button {
   width: auto;
   height: auto;
@@ -201,7 +191,6 @@ nav a {
 }
 .button a {
   display: flex;
-  text-decoration: none;
   position: relative;
 }
 .button p {
@@ -236,8 +225,9 @@ section {
   height: 650px;
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
-
+/************Hebergements à Marseille*************/
 .hébergements {
   width: 880px;
   height: 625px;
@@ -267,21 +257,23 @@ section {
   padding-top: 2px;
   padding-left: 2px;
   padding-right: 2px;
-  /* cursor: pointer; */
   box-shadow: 2px 2px 6px grey;
 }
 .offres h3 {
   font-size: 0.9em;
   margin-top: 10px;
+  margin-left: 10px;
 }
 .offres p {
   margin-top: 10px;
   margin-bottom: 2px;
+  margin-left: 10px;
   font-size: 0.8em;
 }
 .offres img {
   width: 250px;
   height: 115px;
+  object-fit: cover;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
@@ -289,12 +281,12 @@ section {
 .Afficher_plus h3 {
   font-size: 1.3em;
   height: 15px;
-  text-align: end;
   margin-bottom: 50px;
   margin-top: 40px;
-  margin-right: 600px;
+  margin-right: 700px;
   white-space: nowrap;
 }
+/************Les plus populaires*************/
 .populaires {
   width: 420px;
   height: 625px;
@@ -327,7 +319,6 @@ section {
   padding: 2px, 2px, 2px, 2px;
   border-radius: 15px;
   justify-content: space-between;
-  cursor: pointer;
   box-shadow: 2px 2px 6px grey;
   position: relative;
 }
@@ -335,6 +326,7 @@ section {
 .img_pop img {
   width: 130px;
   height: 145px;
+  object-fit: cover;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
 }
@@ -352,14 +344,7 @@ section {
   top: 100px;
   left: 140px;
 }
-.rating {
-  font-size: 1em;
-  height: 12px;
-  color: #0065fc;
-}
-.not_rating {
-  color: #f2f2f2;
-}
+
 /************************aside******************/
 
 aside {
@@ -370,10 +355,8 @@ aside {
 }
 
 aside h2 {
-  display: inline-block;
-  margin-left: 40px;
-  margin-bottom: 20px;
-  align-self: start;
+  margin-left: 50px;
+  margin-top: 20px;
   white-space: nowrap;
 }
 
@@ -381,7 +364,7 @@ aside h2 {
   align-items: center;
   margin: auto;
   height: 560px;
-  width: 1345px;
+  width: 1390px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -402,12 +385,12 @@ aside h2 {
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   box-shadow: 2px 2px 6px grey;
-  cursor: pointer;
 }
 
 .Vieux_port img {
   height: 390px;
   width: 300px;
+  object-fit: cover;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
@@ -421,11 +404,11 @@ aside h2 {
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   box-shadow: 2px 2px 6px grey;
-  cursor: pointer;
 }
 .Pommègues img {
   height: 190px;
   width: 300px;
+  object-fit: cover;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
@@ -439,11 +422,11 @@ aside h2 {
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   box-shadow: 2px 2px 6px grey;
-  cursor: pointer;
 }
 .Frioul img {
   height: 110px;
   width: 300px;
+  object-fit: cover;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
@@ -457,11 +440,11 @@ aside h2 {
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   box-shadow: 2px 2px 6px grey;
-  cursor: pointer;
 }
 .Calanques img {
   height: 380px;
   width: 300px;
+  object-fit: cover;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
@@ -475,11 +458,11 @@ aside h2 {
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   box-shadow: 2px 2px 6px grey;
-  cursor: pointer;
 }
 .Notre_dame img {
   height: 140px;
   width: 300px;
+  object-fit: cover;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
@@ -498,6 +481,7 @@ aside h2 {
 .Longchamps img {
   height: 155px;
   width: 300px;
+  object-fit: cover;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
@@ -518,11 +502,12 @@ footer {
   flex-direction: column;
   justify-content: space-around;
   margin: auto;
-  line-height: 20px;
+  line-height: 1.5;
 }
 footer a {
   text-decoration: none;
   color: black;
+  font-weight: normal;
 }
 
 /*******************Responsive****************/
@@ -532,6 +517,9 @@ footer a {
     width: auto;
     margin: auto;
     margin-left: 20px;
+  }
+  .Top_page {
+    flex-wrap: nowrap;
   }
   .Top_page img {
     margin-right: 350px;
@@ -550,7 +538,7 @@ footer a {
   }
 
   .Afficher_plus h3 {
-    margin-right: 400px;
+    margin-right: 600px;
   }
   .populaires {
     margin: auto;
@@ -591,8 +579,11 @@ footer a {
     margin: auto;
   }
   .activités > div > a > img {
-    height: 130px;
-    width: 195px;
+    height: 150px;
+    width: 220px;
+  }
+  .activités > div > a > h3 {
+    font-size: 0.8em;
   }
 }
 
@@ -619,8 +610,8 @@ footer a {
   .nav_inscrire {
     margin: 0;
     position: absolute;
-    top: 80px;
-    right: 30px;
+    top: 90px;
+    right: 50px;
   }
 
   nav {
@@ -631,18 +622,33 @@ footer a {
   .nav_border-top {
     width: 100%;
     flex-direction: row;
-    margin-top: 50px;
+    border-bottom: solid #f2f2f2;
+    padding-bottom: 15px;
+    margin-top: 30px;
+  }
+  .nav_border-top a:hover {
+    border-top: none;
+    border-bottom: solid #0065fc 2px;
+    padding-bottom: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: #0065fc;
+  }
 
-    width: 100%;
-    align-content: space-around;
+  .nav_border-top div {
+    margin: 0;
   }
-  .nav_hébergements a {
-    margin: auto;
+
+  .nav_hébergements {
     width: 50%;
+    text-align: center;
   }
+
   .nav_activités {
     width: 50%;
+    text-align: center;
   }
+
   .presentation {
     margin-top: 20px;
   }
@@ -682,7 +688,9 @@ footer a {
     height: auto;
     flex-direction: column-reverse;
   }
-
+  aside {
+    margin-top: 0;
+  }
   .hébergements {
     height: auto;
     width: 100%;
@@ -750,11 +758,13 @@ footer a {
     height: 130px;
     width: auto;
   }
+  footer > div {
+    padding-left: 15px;
+  }
   footer {
     flex-direction: column;
     height: auto;
     padding-bottom: 20px;
-    padding-left: 15px;
   }
   .Liens {
     margin: 0px;
