nettoyage du projet

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,6 @@ header {
   height: 500px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
   flex-wrap: wrap;
   margin-left: 50px;
 }
@@ -123,10 +122,10 @@ nav {
   font-size: 1.5em;
   align-items: center;
   margin-right: 0px;
-
   background-color: #f2f2f2;
   justify-items: center;
   padding-left: 20px;
+  padding-right: 15px;
   border-top-left-radius: 50px;
   border-bottom-left-radius: 50px;
 }
